tests/fail/semantics/ownership_borrow_mut_requires_var/main.kira
struct Counter {
    var value: Int
}

function increment(counter: borrow mut Counter) {
    counter.value = counter.value + 1
    return
}

@Main
function main() {
    let counter = Counter { value: 0 }
    increment(counter)
    return
}
